# django_rest_project

./: .flake8  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  manage.py  pyproject.toml
api/: decorators.py  serializers.py  services.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_delete_users.py
config/: settings.py  urls.py
proxy_service/: asgi.py  settings.py  urls.py  wsgi.py
